Errors
<kernel>:1450:1: warning: control reaches end of non-void function
}
^
<kernel>:1495:1: warning: control may reach end of non-void function
}
^
<kernel>:1533:1: warning: control may reach end of non-void function
}
^
<kernel>:1844:6: error: use of undeclared identifier 'hit_info'
                                        hit_info->dv = denom;
                                        ^

